--- a/modules/event-registration-module/src/main/resources/views/Event.xml
+++ b/modules/event-registration-module/src/main/resources/views/Event.xml
@@ -8,14 +8,17 @@
   	<field name="reference"/>
   </grid>
   
-  <form model="com.axelor.event.registration.db.Event" title="Event" name="event-form">
+  <form model="com.axelor.event.registration.db.Event" title="Event" name="event-form" width="large">
   	<panel name="event-panel" title="Event">
   		<field name="reference"/>
   		<field name="startDate"/>
   		<field name="endDate"/>
+  		<static name="$text" hidden="true" showIf="startDate != null &amp;&amp; endDate != null &amp;&amp; $moment(startDate) &gt; $moment(endDate)" colSpan="12"><![CDATA[<span class='label label-warning'>Start Date must before End Date.</span>]]></static>
   		<field name="address" form-view="address-form" canNew="true"/>
   		<field name="registrationOpen"/>
   		<field name="registrationClose"/>
+  		<static name="$text1" hidden="true" showIf="registrationOpen != null &amp;&amp; registrationClose != null &amp;&amp; $moment(registrationOpen) &gt; $moment(registrationClose)" colSpan="12"><![CDATA[<span class='label label-warning'>Registration Open must before Registration close.</span>]]></static>
+  		<static name="$text2" hidden="true" showIf="startDate != null &amp;&amp; registrationClose != null &amp;&amp; $moment(startDate) &lt; $moment(registrationClose)" colSpan="12"><![CDATA[<span class='label label-warning'>Event start date must after Registration close date</span>]]></static>
   		<field name="capacity"/>
   		<field name="eventFees"/>
   		<field name="description" widget="html"/>
@@ -24,9 +27,13 @@
   		<field name="totalDiscount"/>
   	</panel>
   	
-  	<panel-related field="eventRegistrationList" name="event-registration-list-panel" form-view="event-registration-form" grid-view="event-registration-grid" title="Event Registration"/>
+  	<panel-related field="eventRegistrationList" name="event-registration-list-panel" form-view="event-registration-form" grid-view="event-registration-grid" title="Event Registration" onChange="action-event-attrs-event-registration-list-on-change"/>
   	
   	<panel-related field="discountList" name="discount-list-panel" form-view="discount-form" grid-view="discount-grid" title="Discount"/>
   </form>
+  
+  <action-attrs name="action-event-attrs-event-registration-list-on-change">
+  	<attribute name="value" for="totalEntry" expr="eval: eventRegistrationList.size()"/>
+  </action-attrs>
   
   </object-views>
