--- a/modules/event-registration-module/src/main/resources/views/EventRegistration.xml
+++ b/modules/event-registration-module/src/main/resources/views/EventRegistration.xml
@@ -13,7 +13,7 @@
   		<field name="name"/>
   		<field name="email" pattern="^[a-z0-9A-ZáàâäãåçéèêëíìîïñóòôöõúùûüýÿæœÁÀÂÄÃÅÇÉÈÊËÍÌÎÏÑÓÒÔÖÕÚÙÛÜÝŸÆŒ!#$%&amp;'*+/=?^_`{|}~-]+(?:\.[a-z0-9A-ZáàâäãåçéèêëíìîïñóòôöõúùûüýÿæœÁÀÂÄÃÅÇÉÈÊËÍÌÎÏÑÓÒÔÖÕÚÙÛÜÝŸÆŒ!#$%&amp;'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+(?:[a-z]{2,})$"/>
   		<field name="registrationDate"/>
-  		<field name="event" canNew="true"/>
+  		<field name="event" hideIf="$popup()" canNew="true"/>
   		<field name="address" canNew="true"/>
   		<field name="amount"/>
   	</panel>
