Create SetAmount Method

--- a/modules/event-registration-module/src/main/resources/views/Discount.xml
+++ b/modules/event-registration-module/src/main/resources/views/Discount.xml
@@ -13,10 +13,13 @@
   <form model="com.axelor.event.registration.db.Discount" title="Discount" name="discount-form">
   	<panel name="discount-panel" title="Discount">
   		<field name="beforeDays"/>
-  		<field name="discountPercent"/>
+  		<field name="discountPercent" onChange="action-discount-attrs-discount-percent-on-change"/>
   		<field name="discountAmount"/>
-  	</panel>
-  	
+  	</panel>  	
   </form>
+  
+  <action-attrs name="action-discount-attrs-discount-percent-on-change">
+  	<attribute name="value" for="discountAmount" expr="eval: ((__parent__.eventFees)*discountPercent)/100"/>
+  </action-attrs>
   
   </object-views>
